# rusty-pine

./: .gitignore  Cargo.toml  README.md
apps/: Cargo.toml
gen2/rusty-pine/: Cargo.toml
gen2/rusty-pine/neovim/: init.lua
gen2/rusty-pine/src/: cache.rs  context.rs  engine.rs  error.rs  lib.rs  lsp.rs  main.rs  query_builder.rs  syntax.rs
gen2/rusty-pine/src/engine/: query_builder.rs  rendering.rs  sql.rs  syntax.rs  tests.rs
gen2/rusty-pine/src/engine/query_builder/: sql_introspection.rs  stage5.rs
gen2/rusty-pine/src/engine/rendering/: query_rendering.rs
gen2/rusty-pine/src/engine/sql/: parsing.rs  querying.rs  structure.rs
gen2/rusty-pine/src/engine/syntax/: pine.pest  stage1.rs  stage2.rs  stage3.rs  stage4.rs
gen2/rusty-pine/src/engine/syntax/stage2/: fn_calls.rs  identifiers.rs
gen2/rusty-pine/src/engine/syntax/stage3/: iterator.rs
gen2/rusty-pine/src/engine/tests/: error_print.rs  reader.rs
gen2/rusty-pine/src/engine/tests/error_print/: zip.rs
gen2/rusty-pine/src/engine/tests/reader/: setup_parser.rs  test_setup_parser.rs
gen2/rusty-pine/src/query_builder/: stage5.rs
gen2/rusty-pine/src/rendering/: query_rendering.rs
gen2/rusty-pine/src/syntax/: pine.pest  stage1.rs  stage2.rs  stage3.rs  stage4.rs
gen2/rusty-pine/src/syntax/stage2/: identifiers.rs
gen2/rusty-pine/src/tests/: friendship.sql  pine-tests.sql
gen2/rusty-pine/vscode/: LICENSE  package-lock.json  package.json  pine.configuration.json
gen2/rusty-pine/vscode/src/: extension.js
libs/: Cargo.toml
scripts/: stdin-to-postgres-query  stdin-to-query
src/: analyze.rs  (+10 more)
(+93 files in other folders)
