[package]
name = "rusty-pine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select", "password"] }
colored = "2.0.0"
env_logger = "0.10.0"
log = "0.4.19"
once_cell = "1.18.0"
pest = "2.6.0"
pest_derive = "2.6.0"
regex = "1.9.5"
serde_json = "1.0.96"
thiserror = "1.0.40"
serde = { version = "1.0.163", features = ["derive"] }
axum = "0.7.5"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tokio = "1.38.0"
tower-http = { version = "0.5.2", features = ["cors"] }
sqlx = { git = "https://github.com/launchbadge/sqlx.git", version = "0.8.0", features = ["runtime-tokio", "tls-native-tls", "mysql", "postgres"] }
async-trait = { git = "https://github.com/dtolnay/async-trait.git", tag = "0.1.81", version = "0.1.81" }
