[package]
name = "rusty-pine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
env_logger = "0.10.0"
log = "0.4.19"
pest = "2.6.0"
pest_derive = "2.6.0"
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tower-lsp = "0.19.0"
